# attested-key-zk

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  OPENSSL_PROVENANCE.md  Package.swift  README.md  SPEC.md  build-artifactbundle.sh  check-android-artifactbundle.py  check-apple-artifactbundle.py  check-apple-xcframework.py
.github/actions/setup-attested-key-zk/: action.yml
.github/workflows/: ci.yml  release.yml
AttestedKeyZKAndroid.artifactbundle/: info.json
AttestedKeyZKAndroid.artifactbundle/android-x86_64/headers/: module.modulemap
AttestedKeyZKApple.artifactbundle/: info.json
AttestedKeyZKApple.artifactbundle/ios-arm64/headers/attested_key_zk/: approval_proof_v1_zk.h
AttestedKeyZKApple.xcframework/: Info.plist
AttestedKeyZKApple.xcframework/macos-arm64/Headers/: module.modulemap
Sources/CAttestedKeyZK/: shim.c
Sources/CAttestedKeyZK/include/: module.modulemap
Sources/CAttestedKeyZK/include/attested_key_zk/: approval_proof_v1_zk.h
bindings/: README.md
bindings/go/: PROVENANCE.md  README.md  approvalproofv1zk_test.go  attestedkeyzk.go  cgo.go  doc.go  go.mod  stub.go
bindings/swift/Sources/AttestedKeyZK/: AttestedKeyZK.swift
bindings/swift/Tests/AttestedKeyZKTests/: AttestedKeyZKTests.swift
bindings/wasm/: README.md  package.json  tsconfig.json
bindings/wasm/examples/browser/: index.html
bindings/wasm/scripts/: build-wasm.sh  package-entry.test.mjs  smoke-test.mjs
bindings/wasm/shims/util/: crypto.cc  crypto.h
bindings/wasm/src/: errors.ts  generated-module.d.ts  index.ts  layout.ts
patches/longfellow-zk/: 0001-go-bindings-linux-arm64-sysdep.patch
scripts/: build-apple-xcframework.sh  release.sh  sync-go-bindings.sh
scripts/tests/: test-artifactbundle-split.sh  test-github-workflows.py  test-spm-layout.sh  verify-go-linux-arm64-build.sh
src/: approval_proof_v1_zk.cc
tests/: approval_proof_v1_zk_test.cc
